8336846: assert(state->get_thread() == jt) failed: handshake unsafe conditions